--- a/src/pages/Todo.txt
+++ b/src/pages/Todo.txt
@@ -9,3 +9,8 @@ solution --
 2. uss selected todo par input box appear karenge (with old text): solution-- through conditional rendering 
 3. we have to create  a save button jo onClick karta hai handleSave() function ko 
 4. we have to create a cancel button so user cancel edit : solution -- conditional rendredering false 
+
+
+problem -- i have to show todo systemetically 
+           eg.  date based like user see his/her todo date wised 
+           interface -- show today's todo and a button to see history of todo they created 
